Bug 353181 - In Ubuntu if Dolphin is set as a prefered file manager, clicking the trash icon results in a "Malformed URL trash://" message
Summary: In Ubuntu if Dolphin is set as a prefered file manager, clicking the trash ic...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: David Faure
URL: http://askubuntu.com/questions/294380...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-25 16:27 UTC by mongoose11235813
Modified: 2015-09-26 09:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mongoose11235813 2015-09-25 16:27:57 UTC
In the Unity (the default desktop for the Ubuntu) there is a trash icon on the launcher panel. Clicking it opens a URL "trash:" in the preferred file manager, but the Dolphin doesn't recognize this URL, it expects "trash:/" instead.

Reproducible: Always

Steps to Reproduce:
1. Install Ubuntu
2. Install Dolphin
3. Set Dolphin to be the preferred file manager (using exo-preferred-applications)
4. Click trash icon at the bottom of the application launcher.

Actual Results:  
I get a "Malformed URL trash://" message

Expected Results:  
I expect it to open the trash

1. I found a hack to workaround this bug: I set a script that fixes the trash URL before passing it to the Dolphin as my preferred "file manager".
2. It's still very annoying. Is it possible to fix this properly or do Ubuntu and KDE have incomparable URL formats?
3. It can also be a bug in Unity, but the default Ubuntu's file manager (Nautilus) recognizes this URL.
4. The same happens in konqueror
Comment 1 mongoose11235813 2015-09-25 16:33:20 UTC
To clarify: "The same happens in konqueror" means that the konqueror suffers the same problem as Dolphin.
Comment 2 Emmanuel Pescosta 2015-09-25 19:13:06 UTC
Thanks for the bug report, I can reproduce the problem.

I will reassign it to KIO trash ioslave.
Comment 3 Emmanuel Pescosta 2015-09-25 19:17:33 UTC
Review-Request: https://git.reviewboard.kde.org/r/125400/
Comment 4 Emmanuel Pescosta 2015-09-26 09:54:38 UTC
Git commit c89897d0aa6bbc926ed860a3a050d6aaae007a9c by Emmanuel Pescosta.
Committed on 26/09/2015 at 09:54.
Pushed by emmanuelp into branch 'master'.

Allow trash: in addition to trash:/ as url for listDir (calls listRoot)
FIXED-IN: 5.15.0
REVIEW: 125400

M  +2    -1    src/ioslaves/trash/kio_trash.cpp

http://commits.kde.org/kio/c89897d0aa6bbc926ed860a3a050d6aaae007a9c