Allow trash: in addition to trash:/ as url for listDir (calls listRoot)

BUG: 353181
FIXED-IN: 5.15.0
REVIEW: 125400